tests/paczka1/fuzzy1/44618894.err
Error in line 4: yupB6oiU A3A4 2,6
Error in line 24: bc6 A931 51,3
Error in line 11: NOJr A931 59,7
Error in line 23: m8gA S417 78,2
Error in line 3: yupB6oiU A374 0,9
Error in line 29: m8gA S738 49,7
Error in line 31: yupB6oiU A931 96,4
